--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,4 +1,6 @@
 @import '../page/__header/page__header.css';
+@import '../page/__profile/page__profile.css';
+
 
 .page {
   background-color: #000;
