--- a/pages/index.css
+++ b/pages/index.css
@@ -2,3 +2,8 @@
 @import "../vendors/fonts/stylesheet.css";
 @import "../blocks/page/page.css";
 @import "../blocks/header/header.css";
+@import '../blocks/profile/profile.css';
+@import '../blocks/add-button/add-button.css';
+@import '../blocks/pop-up/pop-up.css';
+@import '../blocks/form/form.css';
+@import '../blocks/close-icon/close-icon.css';
