--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,6 @@
 @import '../page/__header/page__header.css';
 @import '../page/__profile/page__profile.css';
+@import '../page/__elements/page__elements.css';
 
 
 .page {
