--- a/pages/index.css
+++ b/pages/index.css
@@ -8,3 +8,4 @@
 @import "../blocks/form/form.css";
 @import "../blocks/close-icon/close-icon.css";
 @import "../blocks/elements/elements.css";
+@import "../blocks/footer/footer.css";
