--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,9 +1,11 @@
 .profile__info {
   padding-left: 30px;
+  padding-right: 30px;
 }
 
 @media screen and (max-width: 590px) {
   .profile__info {
     padding-left: 0;
+    padding-right: 0;
   }
 }
