--- a/blocks/elements/__item-bottom/elements__item-bottom.css
+++ b/blocks/elements/__item-bottom/elements__item-bottom.css
@@ -1,7 +1,7 @@
 .elements__item-bottom {
   background-color: #fff;
   margin: 0;
-  height: calc(361px - 282px);
+  min-height: calc(361px - 282px);
   display: flex;
   align-items: center;
   justify-content: space-between;
