--- a/blocks/form/__title/form__title.css
+++ b/blocks/form/__title/form__title.css
@@ -6,7 +6,8 @@
   line-height: 29px;
   color: #000;
   width: 83%;
-  margin: 34px auto 0;
+  margin: 0 auto;
+  padding-bottom: 15px;
 }
 
 @media screen and (max-width: 425px) {
