--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -1,13 +1,14 @@
-@import './__title/form__title.css';
-@import './__input-name/form__input-name.css';
-@import './__input-profession/form__input-profession.css';
-@import './__input-button/form__input-button.css';
+@import "./__title/form__title.css";
+@import "./__input/form__input.css";
+@import "./__input-button/form__input-button.css";
 
 .form {
+  box-sizing: border-box;
   width: 100%;
-  height: 330px;
+  min-height: 330px;
   background-color: #fff;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
   align-self: flex-end;
+  padding: 34px 0;
 }
