--- a/blocks/pop-up/pop-up.css
+++ b/blocks/pop-up/pop-up.css
@@ -1,17 +1,8 @@
 @import "./__container/pop-up__container.css";
-@import './_opened/pop-up_opened.css';
-
-@keyframes slow-appearance {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
+@import './__close-icon/pop-up__close-icon.css';
 
 .pop-up {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -20,8 +11,5 @@
   justify-content: center;
   align-items: center;
   display: none;
-  animation: slow-appearance 0.5s ease-in-out 1;
+  animation: slow-appearance 0.2s ease-in-out 1;
 }
-
-
-
