--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -6,7 +6,7 @@
   color: #fff;
   outline: none;
   margin-left: auto;
-  background-image: url(../../../images/cross.png);
+  background-image: url(../../../images/cross.svg);
   background-repeat: no-repeat;
   background-position: center;
   border: 2px solid #fff;
@@ -29,6 +29,7 @@
 
 @media screen and (max-width: 590px) {
   .profile__add-button {
+    height: 50px;
     margin-left: 0;
     width: 282px;
     background-size: 6%;
