--- a/blocks/elements/__image/elements__image.css
+++ b/blocks/elements/__image/elements__image.css
@@ -1,4 +1,6 @@
 .elements__image {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
   width: 100%;
   height: 282px;
   object-fit: cover;
