--- a/blocks/elements/__item-bottom/elements__item-bottom.css
+++ b/blocks/elements/__item-bottom/elements__item-bottom.css
@@ -1,9 +1,10 @@
 .elements__item-bottom {
   background-color: #fff;
   margin: 0;
-  min-height: calc(361px - 282px);
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 20px 0;
+  padding: 25px 20px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
