--- a/blocks/header/__logo-link/header__logo-link.css
+++ b/blocks/header/__logo-link/header__logo-link.css
@@ -4,3 +4,9 @@
   width: fit-content;
   height: fit-content;
 }
+
+@media screen and (max-width: 425px) {
+  .header__logo-link {
+    margin-bottom: 30px;
+  }
+}
