--- a/pages/index.css
+++ b/pages/index.css
@@ -5,7 +5,9 @@
 @import "../blocks/profile/profile.css";
 @import "../blocks/pop-up/pop-up.css";
 @import "../blocks/pop-up/_opened/pop-up_opened.css";
+@import "../blocks/pop-up/_closed/pop-up_closed.css";
 @import "../blocks/slow-appearance/slow-appearance.css";
+@import "../blocks/slow-disappearance/slow-disappearance.css";
 @import "../blocks/form/form.css";
 @import "../blocks/elements/elements.css";
 @import "../blocks/footer/footer.css";
