--- a/blocks/elements/__image/elements__image.css
+++ b/blocks/elements/__image/elements__image.css
@@ -1,8 +1,11 @@
 .elements__image {
+  cursor: pointer;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   width: 100%;
   height: 282px;
+  -o-object-fit: cover;
   object-fit: cover;
+  -o-object-position: center;
   object-position: center;
 }
