--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,2 @@
-@import './__copyright/footer__copyright.css';
+@import "./__copyright/footer__copyright.css";
 
-.footer {
-  max-width: 882px;
-  margin: 0 auto;
-}
