--- a/blocks/form/__input-button/form__input-button.css
+++ b/blocks/form/__input-button/form__input-button.css
@@ -4,7 +4,7 @@
   margin: 45px auto 0;
   height: 50px;
   background-color: #000;
-  font-family: 'Inter',Arial, Helvetica, sans-serif;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
@@ -14,7 +14,7 @@
   cursor: pointer;
   outline: none;
   border-radius: 2px;
-  border: 2px solid #FFF;
+  border: 2px solid #fff;
   transition: all 0.2s ease-in-out;
 }
 
@@ -24,6 +24,9 @@
 
 @media screen and (max-width: 425px) {
   .form__input-button {
-    width: 90%;
+    width: calc(100% - 20px * 2);
+    font-size: 14px;
+    line-height: 17px;
+    margin: 36px auto 0;
   }
 }
