--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -6,7 +6,7 @@
   outline: none;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  font-family: 'Inter',Arial, Helvetica, sans-serif;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -15,6 +15,9 @@
 
 @media screen and (max-width: 425px) {
   .form__input {
-    width: 90%;
+    width: calc(100% - 20px * 2);
+    margin: 6px auto 0;
+    font-size: 12px;
+    line-height: 15px;
   }
 }
