--- a/blocks/form/__title/form__title.css
+++ b/blocks/form/__title/form__title.css
@@ -13,6 +13,6 @@
 @media screen and (max-width: 425px) {
   .form__title {
     font-size: 20px;
-    width: 90%;
+    width: calc(100% - 20px * 2);
   }
 }
