--- a/blocks/header/__logo-link/header__logo-link.css
+++ b/blocks/header/__logo-link/header__logo-link.css
@@ -1,7 +1,11 @@
 .header__logo-link {
   display: block;
   margin-bottom: 40px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
 }
 
