--- a/blocks/page/__footer/page__footer.css
+++ b/blocks/page/__footer/page__footer.css
@@ -1,5 +1,9 @@
 .page__footer {
   padding: 66px 19px 60px;
+  max-width: calc(882px + 19px * 2);
+  margin: auto auto 0;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 425px) {
