--- a/blocks/page/__header/page__header.css
+++ b/blocks/page/__header/page__header.css
@@ -1,6 +1,9 @@
 .page__header {
   padding: 45px 0 0;
   margin: 0 auto;
+  max-width: 882px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 425px) {
