--- a/blocks/pop-up-image/__close-icon/pop-up-image__close-icon.css
+++ b/blocks/pop-up-image/__close-icon/pop-up-image__close-icon.css
@@ -1,5 +1,7 @@
-.pop-up__close-icon {
-  display: block;
+.pop-up-image__close-icon {
+  position: absolute;
+  top: -36px;
+  right: -38px;
   outline: none;
   cursor: pointer;
   width: 36px;
@@ -10,22 +12,20 @@
   background-size: 170%;
   transition: opacity 0.2s ease-in-out;
   margin-left: auto;
-  margin-right: -36px;
-  margin-bottom: -2px;
   background-color: transparent;
   border: none;
   padding: 0;
 }
 
-.pop-up__close-icon:hover {
+.pop-up-image__close-icon:hover {
   opacity: 0.6;
 }
 
 @media screen and (max-width: 425px) {
-  .pop-up__close-icon {
+  .pop-up-image__close-icon {
     width: 30px;
     height: 30px;
-    margin-right: -30px;
-    margin-bottom: -2px;
+    top: -31px;
+    right: -32px;
   }
 }
