--- a/blocks/pop-up-image/__img/pop-up-image__img.css
+++ b/blocks/pop-up-image/__img/pop-up-image__img.css
@@ -1,7 +1,6 @@
-.profile__avatar {
-  width: 120px;
-  height: 120px;
-  border-radius: 50%;
+.pop-up-image__img {
+  height: 75vh;
+  max-width: 75vw;
   -o-object-fit: cover;
   object-fit: cover;
   -o-object-position: center;
