--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -13,6 +13,7 @@
   transition: opacity 0.2s ease-in-out;
   cursor: pointer;
   border-radius: 2px;
+  flex-shrink: 0;
 }
 
 .profile__add-button:hover {
