--- a/blocks/slow-appearance/slow-appearance.css
+++ b/blocks/slow-appearance/slow-appearance.css
@@ -1,3 +1,11 @@
+@-webkit-keyframes slow-appearance {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 @keyframes slow-appearance {
   0% {
     opacity: 0;
