--- a/blocks/slow-disappearance/slow-disappearance.css
+++ b/blocks/slow-disappearance/slow-disappearance.css
@@ -1,3 +1,11 @@
+@-webkit-keyframes slow-disappearance {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 @keyframes slow-disappearance {
   0% {
     opacity: 1;
