refactor: improve script.js

--- a/blocks/pop-up/_opened/pop-up_opened.css
+++ b/blocks/pop-up/_opened/pop-up_opened.css
@@ -1,5 +1,5 @@
 .pop-up_opened {
-  display: flex;
-  -webkit-animation: slow-appearance 0.2s ease-in-out 1;
-  animation: slow-appearance 0.2s ease-in-out 1;
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
