--- a/blocks/elements/__image/elements__image.css
+++ b/blocks/elements/__image/elements__image.css
@@ -4,8 +4,6 @@
   border-top-right-radius: 10px;
   width: 100%;
   height: 282px;
-  -o-object-fit: cover;
-  object-fit: cover;
-  -o-object-position: center;
-  object-position: center;
+  background-position: center;
+  background-size: cover;
 }
