--- a/blocks/pop-up-image/pop-up-image.css
+++ b/blocks/pop-up-image/pop-up-image.css
@@ -12,5 +12,9 @@
   background-color: rgba(0, 0, 0, 0.9);
   justify-content: center;
   align-items: center;
-  display: none;
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.2s ease-in-out;
 }
