--- a/blocks/pop-up/pop-up.css
+++ b/blocks/pop-up/pop-up.css
@@ -1,5 +1,6 @@
 @import "./__container/pop-up__container.css";
 @import "./__close-icon/pop-up__close-icon.css";
+@import './_opened/pop-up_opened.css';
 
 .pop-up {
   position: fixed;
@@ -10,6 +11,10 @@
   background-color: rgba(0, 0, 0, 0.5);
   justify-content: center;
   align-items: center;
-  display: none;
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.2s ease-in-out;
+  pointer-events: none;
 }
 
