--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -1,6 +1,6 @@
 .form__input {
   display: block;
-  width: 83%;
+  width: 100%;
   margin: 20px auto 0;
   min-height: 36px;
   outline: none;
@@ -11,11 +11,11 @@
   font-weight: normal;
   font-size: 14px;
   line-height: 17px;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 425px) {
   .form__input {
-    width: calc(100% - 20px * 2);
     margin: 6px auto 0;
     font-size: 12px;
     line-height: 15px;
