--- a/pages/index.css
+++ b/pages/index.css
@@ -6,6 +6,7 @@
 @import "../blocks/pop-up/pop-up.css";
 @import "../blocks/pop-up/_opened/pop-up_opened.css";
 @import "../blocks/form/form.css";
+@import "../blocks/form/__input-error/_visible/form__input-error_visible.css";
 @import "../blocks/elements/elements.css";
 @import "../blocks/elements/__like/_active/elements__like_active.css";
 @import "../blocks/footer/footer.css";
