--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -10,6 +10,7 @@
   background-repeat: no-repeat;
   background-position: center;
   transition: opacity 0.2s ease-in-out;
+  flex-shrink: 0;
 }
 
 .profile__edit-button:hover {
