--- a/blocks/pop-up-image/__img/pop-up-image__img.css
+++ b/blocks/pop-up-image/__img/pop-up-image__img.css
@@ -1,8 +1,4 @@
 .pop-up-image__img {
-  height: 75vh;
+  max-height: 75vh;
   max-width: 75vw;
-  -o-object-fit: cover;
-  object-fit: cover;
-  -o-object-position: center;
-  object-position: center;
 }
