--- a/blocks/pop-up/__close-icon/pop-up__close-icon.css
+++ b/blocks/pop-up/__close-icon/pop-up__close-icon.css
@@ -1,4 +1,7 @@
 .pop-up__close-icon {
+  position: absolute;
+  top: -34px;
+  right: -34px;
   display: block;
   outline: none;
   cursor: pointer;
@@ -9,12 +12,8 @@
   background-position: center;
   background-size: 170%;
   transition: opacity 0.2s ease-in-out;
-  margin-left: auto;
-  margin-right: -36px;
-  margin-bottom: -2px;
   background-color: transparent;
   border: none;
-  padding: 0;
 }
 
 .pop-up__close-icon:hover {
@@ -25,7 +24,7 @@
   .pop-up__close-icon {
     width: 30px;
     height: 30px;
-    margin-right: -30px;
-    margin-bottom: -2px;
+    top: -29px;
+    right: -29px;
   }
 }
