--- a/blocks/elements/__like/elements__like.css
+++ b/blocks/elements/__like/elements__like.css
@@ -7,7 +7,7 @@
   background-image: url(../../../images/like.svg);
   background-repeat: no-repeat;
   background-position: center;
-  width: 22px;
+  min-width: 21px;
   height: 20px;
   background-color: transparent;
   transition: opacity 0.2s ease-in-out;;
