--- a/src/blocks/elements/__remove/elements__remove.css
+++ b/src/blocks/elements/__remove/elements__remove.css
@@ -13,6 +13,7 @@
   background-repeat: no-repeat;
   background-position: center;
   transition: opacity 0.3s ease-in-out;
+  display: none;
 }
 
 .elements__remove:hover {
