--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -5,6 +5,7 @@
 @import "./__info-top/profile__info-top.css";
 @import "./__subtitle/profile__subtitle.css";
 @import "./__add-button/profile__add-button.css";
+@import "./__avatar-container/profile__avatar-container.css";
 
 .profile {
   display: flex;
@@ -16,4 +17,5 @@
     flex-direction: column;
   }
 }
+
 
