--- a/src/blocks/elements/elements.css
+++ b/src/blocks/elements/elements.css
@@ -8,3 +8,5 @@
 @import "../elements/__remove/_active/elements__remove_active.css";
 @import "../elements/__like-container/elements__like-container.css";
 @import "../elements/__like-counter/elements__like-counter.css";
+@import "../elements/__like-message/elements__like-message.css";
+
